# DevVault

./: CLAUDE.md  LICENSE  README.md  features.md  index.html  package-lock.json  package.json  spec.md  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  backup.rs  commands.rs  links.rs  mod.rs  notes.rs  search.rs  secrets.rs  tags.rs  workspaces.rs
src-tauri/src/crypto/: aes.rs  key.rs  mod.rs
src-tauri/src/db/: commands.rs  connection.rs  links.rs  migrations.rs  mod.rs  notes.rs  secrets.rs  tags.rs  workspaces.rs
src-tauri/src/models/: command.rs  link.rs  mod.rs  note.rs  search.rs  secret.rs
src/components/auth/: lock-screen.tsx  setup-screen.tsx
src/components/commands/: command-card.tsx  command-form.tsx
src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
src/components/links/: link-card.tsx  link-form.tsx
src/components/notes/: note-card.tsx  note-form.tsx
src/hooks/: use-copy.ts  use-keyboard.ts
src/lib/: clipboard.ts  keyboard.ts  tauri.ts  utils.ts
src/pages/: commands-page.tsx  links-page.tsx  notes-page.tsx  secrets-page.tsx  settings-page.tsx
src/stores/: auth-store.ts  commands-store.ts  links-store.ts  notes-store.ts  search-store.ts  tags-store.ts  theme-store.ts  vault-store.ts  workspace-store.ts
src/themes/: base.css  dracula.css  github-dark.css  index.ts  light.css  monokai.css  nord.css  solarized.css
(+11 files in other folders)
